# PropChain-contract

./: .pre-commit-config.yaml  COMPLETE_GUIDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  ISSUE_72_COMPLETE.md  PR_BODY.md  PR_BODY_72.md  QUICK_REFERENCE.txt  QUICK_REFERENCE_72.txt  README.md  RUN_ISSUE_72.sh  RUN_THIS.sh  SECURITY.md  WORKFLOW_ISSUE_68.sh  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml  health-check.yml  test.yml
contracts/ai-valuation/src/: lib.rs  rate_limit.rs  reentrancy_guard.rs
contracts/analytics/src/: lib.rs
contracts/compliance_registry/: lib.rs
contracts/crowdfunding/: Cargo.toml  README.md
contracts/database/: Cargo.toml
contracts/database/src/: lib.rs
contracts/dex/: Cargo.toml
contracts/governance/: Cargo.toml
contracts/lending/: Cargo.toml  README.md
contracts/metadata/: Cargo.toml
contracts/metadata/src/: lib.rs
contracts/prediction-market/: Cargo.toml
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/tax-compliance/: Cargo.toml
docs/: API_DOCUMENTATION_STANDARDS.md  API_ERROR_CODES.md  API_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  ARCHITECTURAL_PRINCIPLES.md  ARCHITECTURE_DOCUMENTATION_MAINTENANCE.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_REFERENCE.md  BRIDGE_GUIDE.md  COMPLETE_INTEGRATION_GUIDE.md  COMPONENT_INTERACTION_DIAGRAMS.md  DISASTER_RECOVERY.md  FRONTEND_SDK_GUIDE.md  INTEGRATION_BEST_PRACTICES.md  INTEGRATION_IMPLEMENTATION_SUMMARY.md  INTEGRATION_TROUBLESHOOTING.md  LOAD_TESTING_GUIDE.md  LOAD_TEST_IMPLEMENTATION_SUMMARY.md  LOAD_TEST_MONITORING.md  LOAD_TEST_QUICK_START.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  commenting-standards.md  deployment.md  health-checks.md  logging.md  performance-issue-lazy-loading.md  security_pipeline.md  storage-patterns.md
scripts/: backup.sh  deploy.sh  health-check.sh  load_test.ps1  load_test.sh  log-analyzer.sh  setup-pre-commit.sh  validate_api_docs.sh
sdk/frontend/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/: Cargo.toml  bridge_tests.rs  lib.rs  load_test_endurance_spike.rs  load_test_property_registration.rs  load_test_property_transfer.rs  load_test_scalability.rs  load_tests.rs
(+54 files in other folders)
